<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/item_favorite_movie"
    android:layout_marginTop="3dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="7dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/background_card_rv">

        <ImageView
            android:id="@+id/ig_item_movie_favorite"
            android:layout_width="120dp"
            android:layout_height="160dp"
            tools:src="@drawable/background_load"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_movie_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                tools:text="@string/title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/ic_star_half_black_24dp"/>

                <TextView
                    android:id="@+id/tv_rate_movie_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    tools:text="@string/rate" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_overview_movie_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="14sp"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                android:layout_marginBottom="5dp"
                tools:text="@string/overview"/>

            <!--            <Button-->
            <!--                android:id="@+id/btn_delete_movie_favorite"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:text="Delete Favorite"-->
            <!--                android:textSize="14sp"-->
            <!--                android:textColor="@android:color/white"-->
            <!--                android:background="@color/colorPrimaryDark"-->
            <!--                android:textStyle="bold"-->
            <!--                android:shadowColor="@android:color/white"-->
            <!--                android:layout_margin="10dp"/>-->

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>